# DebuggerNetMcp

./: .gitignore  DebuggerNetMcp.sln  README.md  build.sh  debugger-net-mcp.sh  install.sh  pyproject.toml  test_dap_minimal.py  test_dap_protocol.py  test_dap_raw.py  test_integration.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md
.planning/phases/02-interop-engine-foundation/: 02-02-PLAN.md
.planning/phases/03-debug-engine/: 03-01-SUMMARY.md  03-02-PLAN.md  03-03-SUMMARY.md  03-05-SUMMARY.md
.planning/phases/04-mcp-server/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-type-system/: 05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  (+1 more)
native/: CMakeLists.txt
native/src/: ptrace_wrapper.c
src/DebuggerNetMcp.Core/: Class1.cs  DebuggerNetMcp.Core.csproj
src/DebuggerNetMcp.Mcp/: DebuggerNetMcp.Mcp.csproj  DebuggerTools.cs  Program.cs
src/debugger_net_mcp/: __init__.py  __main__.py  dap_client.py  dotnet_utils.py  server.py  session.py
tests/DebuggerNetMcp.Tests/: DebuggerAdvancedTests.cs  DebuggerFixture.cs  DebuggerIntegrationTests.cs  DebuggerNetMcp.Tests.csproj  DebuggerTestHelpers.cs  MathTests.cs  PdbReaderTests.cs  UnitTest1.cs
tests/HelloDebug/: HelloDebug.csproj  Program.cs
(+60 files in other folders)
