[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debugger-net-mcp"
version = "0.1.0"
description = "MCP Server for .NET Core debugging via netcoredbg DAP"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/debugger_net_mcp"]
